------------------------------------------------------------------------
r2077 | rdahnke | 2022-08-10 11:38:50

Changed paths:
 M .gitignore
 M CHANGES.txt
 M cat_parallelize.m
 M cat_run.m


1) New:    Added routine to keep some order with parallel processing log files. 
           (i)  If BIDS is used then collect all parallel processing log files  
                in a log subdirectory. 
           (ii) If the current directory is located in the SPM path then try to 
                the store parallel processing log files into a logs subdirectory  
                in the cat12 main directory to avoid littering (also ignored by
                GitHub). ------------------------------------------------------------------------
r2076 | gaser | 2022-08-10 01:11:04

Changed paths:
 M CHANGES.txt
 M cat_surf_results.m
 M cat_vol_img2mip.m


Changed: Added option to leave slice definition empty in cat_surf_results.m
         to automatically estimate slices with local maxima.
------------------------------------------------------------------------
r2075 | gaser | 2022-08-10 00:19:02

Changed paths:
 M CHANGES.txt
 M cat_surf_results.m
 M cat_vol_img2mip.m
 M cat_vol_slice_overlay.m


Changed: Added option to skip display of colorbar in cat_vol_img2mip.m.
Changed: Changed function to save png-image in cat_vol_img2mip.m
Changed: Many changes in cat_surf_results:
           - close old windows if starting
           - corrected handling of OV.func
------------------------------------------------------------------------
r2074 | gaser | 2022-08-09 18:30:20

Changed paths:
 M CHANGES.txt
 M cat12.m
 M cat_stat_homogeneity.m
 M cat_surf_results.m
 M cat_vol_img2mip.m
 M cat_vol_slice_overlay.m
 M slice_overlay.m


Fixed:   Removed some smaller bugs in cat_stat_homogeneity.m.
Fixed:   Removed issues with colorbar and range in cat_surf_results.m.
Changed: Added option to control background color in cat_vol_slice_overlay.m
         and slice_overlay.m